# ElProfessor

./: .cursorrules  .env.example  .gitignore  README.md  pyproject.toml
scripts/: start_elprofessor.sh
src/elprofessor/: __init__.py  __main__.py  main.py  tool_manager.py
src/elprofessor/audio/: __init__.py  head_wobbler.py  speech_tapper.py
src/elprofessor/managers/: __init__.py  camera_manager.py
src/elprofessor/prompts/: default_prompt.md  el_professor.md  kikito.md
src/elprofessor/tools/: __init__.py  base.py  camera_snapshot.py  camera_view.py  conversation.py  head_tracking.py  move_head.py  play_emotion.py
systemd/: elprofessor.service
